# roll

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: benchmark.yml  ci.yml
src/: main.rs
src/functions/: recaptcha.rs
src/models/: poll.rs  state.rs  view.rs  voter.rs
src/routes/: create_poll.rs  get_poll.rs  get_poll_options.rs  static_routes.rs  vote_poll.rs
